// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/guide-tooltip/GuideTooltip should render with all options 1`] = `
<Tooltip
  className="bdl-GuideTooltip "
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={true}
  position="top-center"
  showCloseButton={true}
  text={
    <React.Fragment>
      <div
        className="bdl-GuideTooltip-icon"
      >
        <FolderShared32 />
      </div>
      <div
        className="bdl-GuideTooltip-right"
      >
        <div
          className="bdl-GuideTooltip-title"
        >
          <div>
            title
          </div>
        </div>
        <div
          className="bdl-GuideTooltip-body"
        >
          <div>
            body
          </div>
        </div>
        <div
          className="bdl-GuideTooltip-bottom"
        >
          <div
            className="bdl-GuideTooltip-navigation"
          >
            <Button
              className="bdl-GuideTooltip-previousButton"
              isLoading={false}
              showRadar={false}
              type="submit"
            >
              Previous
            </Button>
            <Button
              className="bdl-GuideTooltip-nextButton"
              isLoading={false}
              showRadar={false}
              type="submit"
            >
              Next
            </Button>
          </div>
          <div
            className="bdl-GuideTooltip-steps"
          >
            <FormattedMessage
              defaultMessage="{currentStepIndex} of {totalNumSteps}"
              id="boxui.core.guidetooltip.navigation"
              values={
                Object {
                  "currentStepIndex": 1,
                  "totalNumSteps": 3,
                }
              }
            />
          </div>
        </div>
      </div>
    </React.Fragment>
  }
  theme="callout"
/>
`;

exports[`components/guide-tooltip/GuideTooltip should render with just body 1`] = `
<Tooltip
  className="bdl-GuideTooltip "
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={true}
  position="top-center"
  showCloseButton={true}
  text={
    <React.Fragment>
      <div
        className="bdl-GuideTooltip-right"
      >
        <div
          className="bdl-GuideTooltip-body"
        >
          <div>
            body
          </div>
        </div>
      </div>
    </React.Fragment>
  }
  theme="callout"
/>
`;

exports[`components/guide-tooltip/GuideTooltip should render with title and body 1`] = `
<Tooltip
  className="bdl-GuideTooltip "
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={true}
  position="top-center"
  showCloseButton={true}
  text={
    <React.Fragment>
      <div
        className="bdl-GuideTooltip-right"
      >
        <div
          className="bdl-GuideTooltip-title"
        >
          <div>
            title
          </div>
        </div>
        <div
          className="bdl-GuideTooltip-body"
        >
          <div>
            body
          </div>
        </div>
      </div>
    </React.Fragment>
  }
  theme="callout"
/>
`;
